--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "vercel-build": "composer install && npm install && npm run build"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
